--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -1,15 +1,21 @@
 body {
   font-family: "Karla", sans-serif;
   background-color: #eeeeee;
-  min-height: 100vh; }
+  height: 100vh;
+}
 
   a {
     color: inherit;
   }
   nav {
-    padding-top: 20px;
+    float: top;
+    margin-top: 1em;
+    margin-bottom: 1em;
   }
   #login-page {
+    margin-top: 10em;
+  }
+  #register-page {
     margin-top: 10em;
   }
 
@@ -88,8 +94,9 @@ body {
     font-size: 14px;
     color: #919aa3; }
 
-
-    .card {
-      border-radius: 27.5px;
-      margin-bottom: 24px;
-    }
+  .card {
+    border-radius: 27.5px;
+    margin-bottom: 24px;
+  }
+  .card-body {
+  }
